feat: ok for openai agent

--- a/.env.local
+++ b/.env.local
@@ -20,3 +20,6 @@ CHAT_FEISHU_APP_ID=cli_a05e2aec6ef9d00e
 CHAT_FEISHU_APP_SECRET=LwWr8dmTqDbVqOi2ngehDUhS5tSLs1Ni
 CHAT_FEISHU_EVENT_ENCRYPT_KEY=mNgmAwBE2mEpDa77CFOkKgNMUQXOBWzd
 CHAT_FEISHU_VERIFICATION_TOKEN=7l5DR0IxIbm3EoC8NsvVifmdX3QzNpED
+
+# Agent OpenAI
+AGENT_OPENAI_TOKEN=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
