--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -27,7 +27,7 @@ exchangeStrategies:
       exchange:
 
     symbol: OPUSDT
-    interval: 1h
+    interval: 5m
     leverage: 3
     max_window_size: 21
 
