feat: config chatgpt agent

--- a/.env.local
+++ b/.env.local
@@ -23,3 +23,7 @@ CHAT_FEISHU_VERIFICATION_TOKEN=7l5DR0IxIbm3EoC8NsvVifmdX3QzNpED
 
 # Agent OpenAI
 AGENT_OPENAI_TOKEN=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
+
+# Agent chatgpt
+AGENT_CHATGPT_EMAIL=yubing744@163.com
+AGENT_CHATGPT_PASSWORD=7g!fCzQNUAU.M8sB3Y6h
