feat: update chatgpt and tips

--- a/.env.local
+++ b/.env.local
@@ -25,5 +25,5 @@ CHAT_FEISHU_VERIFICATION_TOKEN=7l5DR0IxIbm3EoC8NsvVifmdX3QzNpED
 AGENT_OPENAI_TOKEN=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
 
 # Agent chatgpt
-AGENT_CHATGPT_EMAIL=yubing744@163.com
-AGENT_CHATGPT_PASSWORD=7g!fCzQNUAU.M8sB3Y6h
+AGENT_CHATGPT_EMAIL=yubing744@gmail.com
+AGENT_CHATGPT_PASSWORD=Z73JL_itn.WioCxg
