feat: support feishu notify

--- a/.env.local
+++ b/.env.local
@@ -3,10 +3,6 @@ OKEX_API_KEY=2b7610f4-29b8-4b8a-8a1f-c9ac28ec137a
 OKEX_API_SECRET=7C1C4DE0F62E859A6E68D45C862DA5D2
 OKEX_API_PASSPHRASE=Tv_sctC78Qu9Nq2f
 
-# Notify
-SLACK_TOKEN=
-TELEGRAM_BOT_TOKEN=
-
 # Debug
 # DEBUG_WEBSOCKET_RAW_MESSAGE=true
 # DEBUG=true
@@ -14,6 +10,10 @@ TELEGRAM_BOT_TOKEN=
 # Store
 # DB_DRIVER=mysql
 # DB_DSN="root:bbgo123456@tcp(127.0.0.1:3306)/bbgo"
+
+# Notify
+NOTIFY_FEISHU_APP_ID=cli_a05e2aec6ef9d00e
+NOTIFY_FEISHU_APP_SECRET=LwWr8dmTqDbVqOi2ngehDUhS5tSLs1Ni
 
 # Chat Feishu
 CHAT_FEISHU_APP_ID=cli_a05e2aec6ef9d00e
@@ -25,5 +25,5 @@ CHAT_FEISHU_VERIFICATION_TOKEN=7l5DR0IxIbm3EoC8NsvVifmdX3QzNpED
 AGENT_OPENAI_TOKEN=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
 
 # Agent chatgpt
-AGENT_CHATGPT_EMAIL=yubing744@gmail.com
-AGENT_CHATGPT_PASSWORD=Z73JL_itn.WioCxg
+AGENT_CHATGPT_EMAIL=yubing744@163.com
+AGENT_CHATGPT_PASSWORD=7g!fCzQNUAU.M8sB3Y6h
