feat: ok for fng index

--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -18,11 +18,11 @@ exchangeStrategies:
   jarvis:
     chat:
       feishu:
-        enabled: false
+        enabled: true
         server_port: 3000
     notify:
       feishu:
-        enabled: true
+        enabled: false
         tenant_key: "2cc4e3dc7f8e175d"
         receive_id_type: "chat_id"
         receive_id: "oc_30913e3222c7beca3efd4d9cc2d832af"
@@ -40,11 +40,13 @@ exchangeStrategies:
         window_size: 20
         include_events:
           - kline_changed
+          - rsi_changed
           - boll_changed
+          - fng_changed
           - position_changed
           - update_finish
     symbol: OPUSDT
-    interval: 5m
+    interval: 15m
     leverage: 3
     max_window_size: 20
     
