--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -49,9 +49,12 @@ exchangeStrategies:
         tenant_key: "2cc4e3dc7f8e175d"
         receive_id_type: "chat_id"
         receive_id: "oc_30913e3222c7beca3efd4d9cc2d832af"
+      feishu_hook:
+        enabled: true
+        url: "https://open.feishu.cn/open-apis/bot/v2/hook/e926c8b5-50e6-41e8-8f70-12a8631dfd93"
     chat:
       feishu:
-        enabled: true
+        enabled: false
         server_port: 3000
     symbol: OPUSDT
     interval: 5m
