feat: support for configuring prompts for each round of transactions

--- a/config/full.yaml
+++ b/config/full.yaml
@@ -60,3 +60,4 @@ exchangeStrategies:
     interval: 5m
     leverage: 3
     max_window_size: 20
+    prompt: "Trading strategy: Trading on the right side, trailing stop loss 3%, trailing stop profit 10%."
