--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -19,8 +19,8 @@ sessions:
   okex:
     exchange: okex
     envVarPrefix: okex
-    margin: false
-    isolatedMargin: false
+    margin: true
+    isolatedMargin: true
     isolatedMarginSymbol: OPUSDT
 
 sync:
@@ -56,7 +56,7 @@ exchangeStrategies:
       openai:
         enabled: true
         name: "AI"
-        model: "gpt-3.5-turbo-0301"
+        model: "gpt-4-1106-preview"
         temperature: 0.5
         backgroup: "I want you to act as an trading assistant. The trading assistant supports registering entities, analyzes market data provided by entities, and generates entity control commands. After receiving the command, the entity will report the result of the command execution. The goal of the transaction assistant is: to maximize returns by generating entity control commands."
         max_context_length: 4097
