--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -20,7 +20,7 @@ sessions:
     exchange: okex
     envVarPrefix: okex
     margin: true
-    isolatedMargin: true
+    isolatedMargin: false
     isolatedMarginSymbol: OPUSDT
 
 sync:
@@ -65,7 +65,7 @@ exchangeStrategies:
         enabled: true
         url: "https://open.feishu.cn/open-apis/bot/v2/hook/e926c8b5-50e6-41e8-8f70-12a8631dfd93"
     symbol: OPUSDT
-    interval: 5m
+    interval: 1m
     leverage: 3
     max_window_size: 20
     prompt: "Trading strategy: Trading on the right side, trailing stop loss 3%, trailing stop profit 10%."
