--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -21,7 +21,7 @@ sessions:
     envVarPrefix: okex
     margin: true
     isolatedMargin: false
-    isolatedMarginSymbol: OPUSDT
+    isolatedMarginSymbol: JUPUSDT
 
 sync:
   # userDataStream is used to sync the trading data in real-time
@@ -37,7 +37,7 @@ sync:
     - okex
 
   symbols:
-    - OPUSDT
+    - JUPUSDT
 
 exchangeStrategies:
 - on: okex
@@ -64,7 +64,7 @@ exchangeStrategies:
       feishu_hook:
         enabled: true
         url: "https://open.feishu.cn/open-apis/bot/v2/hook/e926c8b5-50e6-41e8-8f70-12a8631dfd93"
-    symbol: OPUSDT
+    symbol: JUPUSDT
     interval: 1m
     leverage: 3
     max_window_size: 20
