--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -50,7 +50,7 @@ exchangeStrategies:
       ollama:
         server_url: "http://localhost:11434"
         model: "mistral:latest"
-      primary: "anthropic"
+      primary: "ollama"
     env:
       exchange:
         window_size: 20
@@ -73,7 +73,7 @@ exchangeStrategies:
         enabled: true
         url: "https://open.feishu.cn/open-apis/bot/v2/hook/e926c8b5-50e6-41e8-8f70-12a8631dfd93"
     symbol: JUPUSDT
-    interval: 1m
+    interval: 15m
     leverage: 3
     max_window_size: 20
     strategy: "Trading on the right side, trailing stop loss 3%, trailing stop profit 10%."
