--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -34,7 +34,7 @@ exchangeStrategies:
       ollama:
         server_url: "http://localhost:11434"
         model: "mistral:latest"
-      primary: "ollama"
+      primary: "anthropic"
     env:
       exchange:
         window_size: 20
@@ -51,13 +51,13 @@ exchangeStrategies:
         name: "AI"
         temperature: 0.1
         max_context_length: 4096
-        backgroup: "I want you to act as an trading assistant. The trading assistant supports registering entities, analyzes market data provided by entities, and generates entity control commands. After receiving the command, the entity will report the result of the command execution. The goal of the transaction assistant is: to maximize returns by generating entity control commands."
+        backgroup: "I want you to act as an trading assistant. The trading assistant supports registering entities, analyzes market data provided by crypto entities, and generates entity control commands. After receiving the command, the entity will report the result of the command execution. The goal of the transaction assistant is: to maximize returns by generating entity control commands."
     notify:
       feishu_hook:
         enabled: true
         url: "https://open.feishu.cn/open-apis/bot/v2/hook/e926c8b5-50e6-41e8-8f70-12a8631dfd93"
     symbol: JUPUSDT
-    interval: 1m
+    interval: 5m
     leverage: 1
     max_window_size: 20
     strategy: "Trading on the right side, trailing stop loss 3%, trailing stop profit 10%."
