--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -40,6 +40,7 @@ exchangeStrategies:
       exchange:
         window_size: 20
       include_events:
+        - kline_changed
         - rsi_changed
         - fng_changed
         - position_changed
