--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -33,8 +33,8 @@ exchangeStrategies:
         model: "claude-3-opus-20240229"
       ollama:
         server_url: "http://localhost:11434"
-        model: "mistral:latest"
-      primary: "openai"
+        model: "codegemma:7b"
+      primary: "ollama"
       secondly: "anthropic"
     env:
       exchange:
