--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -21,20 +21,21 @@ sessions:
     envVarPrefix: okex
     margin: true
     isolatedMargin: false
-    isolatedMarginSymbol: JUPUSDT
+    isolatedMarginSymbol: SUIUSDT
 
 exchangeStrategies:
 - on: okex
   jarvis:
     llm:
       openai:
-        model: "gpt-4-1106-preview"
+        base_url: "https://api.deepseek.com"
+        model: "deepseek-coder"
       anthropic:
-        model: "claude-3-opus-20240229"
+        model: "claude-3-sonnet-20240229"
       ollama:
         server_url: "http://localhost:11434"
         model: "wizardlm2:7b" # Options：wizardlm2:7b, codegemma:7b, llama3:latest, and mistral:latest
-      primary: "ollama"
+      primary: "openai"
       secondly: "anthropic"
     env:
       exchange:
@@ -67,7 +68,7 @@ exchangeStrategies:
       feishu_hook:
         enabled: true
         url: "https://open.feishu.cn/open-apis/bot/v2/hook/e926c8b5-50e6-41e8-8f70-12a8631dfd93"
-    symbol: JUPUSDT
+    symbol: SUIUSDT
     interval: 5m
     leverage: 1
     max_window_size: 21
