--- a/bbgo.yaml
+++ b/bbgo.yaml
@@ -103,6 +103,14 @@ exchangeStrategies:
     reflection_enabled: true
     # Enable or disable reading from memory bank for decision making (default: true)
     read_memory_enabled: true
+    # Memory configuration
+    # The strategy runs in cycles, and AI memory resets at the beginning of each cycle.
+    # This drives the AI to maintain perfect documentation in the memory file.
+    # After each reset, the AI relies ENTIRELY on the Memory Part to understand the project and continue work effectively.
+    memory:
+      enabled: true
+      memory_path: "memory-bank/trading-memory.md"
+      max_words: 1000
     strategy: |
       1. Identify Key Support and Resistance Levels
       - *Support Level*: A price level where a downtrend can be expected to pause due to a concentration of demand.
